<resources>
    <string name="app_name">yodreik</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date: %s</string>
    <string name="duration">Duration: %d</string>

    <!-- Menu -->
    <string name="menu_element_home">Home</string>
    <string name="menu_element_motivation">Motivation</string>
    <string name="menu_element_history">History</string>
    <string name="menu_element_profile">Profile</string>

    <!-- Login -->
    <string name="title_login">Log In</string>
    <string name="login_input_login">Login</string>
    <string name="login_input_password">Password</string>
    <string name="button_login">Log In</string>

    <!-- Register -->
    <string name="title_register">Create an account</string>
    <string name="register_input_username">Username</string>
    <string name="register_input_email">Email</string>
    <string name="register_input_password">Password</string>
    <string name="register_input_retype_password">Submit password</string>
    <string name="button_register">Create</string>

    <!-- Create workout -->
    <string name="create_workout_title">Create Workout</string>
    <string name="create_workout_input_date">Date</string>
    <string name="create_workout_input_duration">Duration</string>
    <string name="create_workout_input_kind">Kind</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- Motivation -->
    <string name="motivation_title">Your daily quote</string>

    <!-- Home -->
    <string name="home_button_create_workout">Create workout</string>

    <!-- Toasts -->
    <string name="toast_invalid_date_format">Invalid date format</string>
    <string name="toast_invalid_duration">Invalid duration</string>
    <string name="toast_workout_created_success">Workout created successfully</string>
    <string name="toast_something_went_wrong">Something went wrong</string>

    <string name="toast_login_too_short">Login is too short</string>
    <string name="toast_login_too_long">Login is too long</string>
    <string name="toast_password_length_incorrect">Password must be between 8 and 50 characters</string>
    <string name="toast_logged_in_as">Logged in as @%s</string>

    <string name="toast_log_in_first">Please, log in first</string>
    <string name="toast_logged_out">Logged out</string>

    <string name="toast_username_length_incorrect">Username must be between 5 and 32 characters</string>
    <string name="toast_passwords_dont_match">Passwords do not match</string>
    <string name="toast_registered_success">Registered successfully. Check your email to verify</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Delete Workout-->
    <string name="delete_workout_record">Delete Workout Record</string>
    <string name="sure_to_delete_workout">Are you sure you want to delete this workout record?</string>
    <string name="delete_workout_success">Workout successfully deleted</string>
    <string name="delete_workout_error">Can\'t delete workout</string>

    <!-- History-->
    <string name="latest_workouts">Latest workouts</string>

    <!-- Statistics -->
    <string name="statistics_time_spent">Time Spent</string>
    <string name="statistics_longest_workout">Longest Workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>