<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/menu_element_home" />
    <item
            android:id="@+id/motivation"
            android:icon="@drawable/lightning"
            android:title="@string/menu_element_motivation"/>

    <item
            android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/menu_element_history"/>

    <item
            android:id="@+id/workout"
            android:icon="@drawable/profile"
            android:title="Workout"/>

    <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_element_profile"/>
</menu>