<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <EditText
            android:id="@+id/edit_workout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_workout_input_date"/>

    <EditText
            android:id="@+id/edit_workout_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_workout_input_duration"/>

    <EditText
            android:id="@+id/edit_workout_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_workout_input_kind"/>
</LinearLayout>
